--- a/cli/package.json
+++ b/cli/package.json
@@ -10,7 +10,7 @@
   "bugs": {
     "url": "https://github.com/flow-typed/flow-typed/issues/new/choose"
   },
-  "version": "3.8.0",
+  "version": "4.0.0-1",
   "main": "dist/cli.js",
   "bin": "dist/cli.js",
   "engines": {
@@ -44,6 +44,7 @@
     "prettier": "^1.19.1",
     "rimraf": "^3.0.2",
     "semver": "7.3.2",
+    "simple-git": "^3.10.0",
     "table": "^6.7.3",
     "which": "^2.0.2",
     "yargs": "^15.1.0"
