able to scan pnpm workspace file

--- a/cli/package.json
+++ b/cli/package.json
@@ -39,6 +39,7 @@
     "fs-extra": "^8.1.0",
     "glob": "^7.1.6",
     "got": "^11.8.5",
+    "js-yaml": "^4.1.0",
     "md5": "^2.2.1",
     "mkdirp": "^1.0.3",
     "node-stream-zip": "^1.15.0",
