--- a/cli/package.json
+++ b/cli/package.json
@@ -64,7 +64,7 @@
     "eslint-plugin-fb-flow": "^0.0.4",
     "eslint-plugin-flowtype": "^8.0.3",
     "eslint-plugin-prettier": "^4.0.0",
-    "flow-bin": "^0.183.0",
+    "flow-bin": "0.199.0",
     "flow-copy-source": "^2.0.9",
     "jest": "^27.3.1"
   },
