--- a/cli/package.json
+++ b/cli/package.json
@@ -23,7 +23,7 @@
     "clean": "rimraf dist",
     "flow": "flow",
     "lint": "eslint .",
-    "prepare": "mkdirp dist && yarn test",
+    "prepare": "mkdirp dist",
     "prepublishOnly": "cp ../README.md .",
     "test": "yarn clean && yarn build && yarn test-quick",
     "test-quick": "jest && yarn lint && yarn flow",
