Make the CLI type check under Flow 0.261.0

--- a/cli/.flowconfig
+++ b/cli/.flowconfig
@@ -6,6 +6,7 @@
 .*/node_modules/resolve/test/.*
 <PROJECT_ROOT>/.test-dir/.*
 <PROJECT_ROOT>/.flow-bins-cache/.*
+<PROJECT_ROOT>/dist/.*
 <PROJECT_ROOT>/node_modules/.*config-chain/test/broken.json
 .*/__.*-fixtures__/.*
 
