[flow|environment] Add web-animations spec
Summary:
Adds the Web Animations 1 spec: https://www.w3.org/TR/web-animations-1/

Test Plan:
- `node cli/dist/cli.js run-tests --environmentOnly`

--- a/definitions/environments/html/flow_v0.261.x-/config.json
+++ b/definitions/environments/html/flow_v0.261.x-/config.json
@@ -6,6 +6,7 @@
     "dom": ["v0.261.x-"],
     "geometry": ["v0.261.x-"],
     "serviceworkers": ["v0.261.x-"],
-    "streams": ["v0.261.x-"]
+    "streams": ["v0.261.x-"],
+    "web-animations": ["v0.261.x-"]
   }
 }
