--- a/definitions/environments/node/flow_v0.261.x-/config.json
+++ b/definitions/environments/node/flow_v0.261.x-/config.json
@@ -7,6 +7,7 @@
     "geometry": ["v0.261.x-"],
     "html": ["v0.261.x-"],
     "serviceworkers": ["v0.261.x-"],
-    "streams": ["v0.261.x-"]
+    "streams": ["v0.261.x-"],
+    "web-animations": ["v0.261.x-"]
   }
 }
