--- a/definitions/environments/node/flow_v0.261.x-/config.json
+++ b/definitions/environments/node/flow_v0.261.x-/config.json
@@ -4,6 +4,8 @@
     "bom": ["v0.261.x-"],
     "cssom": ["v0.261.x-"],
     "dom": ["v0.261.x-"],
+    "geometry": ["v0.261.x-"],
+    "html": ["v0.261.x-"],
     "serviceworkers": ["v0.261.x-"],
     "streams": ["v0.261.x-"]
   }
